<resources>
    <string name="app_name">MiMusic</string>
    <string name="btnHaveAccountText">Already have an account? Log in</string>
    <string name="btnRegisterText">Create an account</string>
    <string name="edtEmailHint">E-mail address</string>
    <string name="edtPasswordHint">Password</string>
    <string name="btnLoginText">Log in</string>
    <string name="txtForgotPassText">Forgot password?</string>
    <string name="btnLoginFacebookText">Log in with Facebook</string>
    <string name="btnCreateAccountText">Create an account</string>
    <string name="edtConfirmPasswordText">Repeat password</string>


    <!--Tab-->
    <string name="ToolbarBottomTabHomeString">Home</string>
    <string name="ToolbarBottomTabGenericsString">Generics</string>
    <string name="ToolbarBottomTabMenuString">Menu</string>
    <string name="ToolbarBottomTabPlayString">Play</string>
    <string name="ToolbarBottomTabSearchString">Search</string>

    <!--Album-->
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="add_to_play_next">Add to Play Next</string>
    <string name="txtRecycleLoadMoreString">See more</string>
    <string name="txtRecycleAlbumText">Album list</string>
    <string name="txtRecycleTopSongText">Top Songs</string>
    <string name="txtRecycleSongText">All Songs</string>
    <string name="txtSongTitleText">Song Title</string>
    <string name="txtArtist">Artist</string>
    <string name="error_playing_track">error_playing_track</string>
    <string name="txtAlbum">Album</string>

</resources>
