<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/toolbarBottom"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" style="@style/Layout.FullWidthHeight"
    android:background="@color/colorPrimaryDark"
   >

        <EditText
            android:layout_marginTop="@dimen/padding_huger"
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textHeight"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/edtEmailHint"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/cmn_gray"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textHeight"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/edtPasswordHint"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/cmn_gray"
            android:inputType="textPassword" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtForgotPassText"
            android:textColor="@color/cmn_accent"
            android:layout_gravity="end"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/padding_normal"
            />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/btnLoginText"
            android:textColor="@color/cmn_white"
            android:background="@color/cmn_accent"
            android:layout_marginTop="@dimen/padding_huge"
            />

        <Button
            android:id="@+id/btnLoginFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cmn_blue"
            android:text="@string/btnLoginFacebookText"
            android:textAllCaps="false"
            android:textColor="@color/cmn_white"
            android:layout_marginTop="@dimen/padding_normal"

            />


</LinearLayout>